# Real-to-Sim-Registration

Chicken skin results/: NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
Chicken skin results/GravityUse0.5/: interior_000001.ply  interior_000005.ply  interior_000007.ply  interior_000009.ply  interior_000010.ply  interior_000016.ply  interior_000018.ply  interior_000019.ply  interior_000024.ply  interior_000026.ply  interior_000027.ply  interior_000028.ply  interior_000031.ply  interior_000032.ply  interior_000033.ply  (+33 more)
New_test/: extract_all_pose.py  extract_fusion.py  extract_image.py  extract_pointcloud.py  extract_selected_pose_joint.py
New_test/pyramid_exp_1_s_0.01_v_0.0015/dataset_setup/cluster/: CMakeLists.txt  clustering.cpp
New_test/pyramid_exp_1_s_0.01_v_0.0015/dataset_setup/cluster/include/: DeformativeObject3D.h  mesh.h
New_test/pyramid_exp_1_s_0.01_v_0.0015/dataset_setup/cluster/src/: CMakeLists.txt  Makefile  cmake_install.cmake  mesh.cpp  visualization.cpp
New_test/pyramid_exp_1_s_0.01_v_0.0015/dataset_setup/registration/: CMakeLists.txt  visualize.cpp
Registration/: 0registration.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  closest_points.txt  cmake_install.cmake  eg_der.txt  eg_err.txt  example.py  registration.cpp  registration2.cpp
Registration/include/: mesh.h
Registration/reg_data/: 29.ply  30.ply  31.ply  32.ply  33.ply  34.ply  35.ply  36.ply  37.ply  38.ply  39.ply  40.ply  41.ply  42.ply  43.ply  44.ply  45.ply  initial.ply  interior_000017.ply  interior_000041.ply  interior_000047.ply  interior_000053.ply  interior_000061.ply  interior_000065.ply  interior_000071.ply  interior_000076.ply  interior_000084.ply  interior_000088.ply  reg_sm_0.002.txt  reg_sm_0.003.txt  reg_sm_0.004.txt  reg_sm_0.005.txt
Registration/reg_data/loop5/: tmp_000000.ply  tmp_000001.ply  tmp_000003.ply  tmp_000004.ply  tmp_000005.ply  tmp_000010.ply  tmp_000011.ply  tmp_000012.ply  tmp_000015.ply  tmp_000019.ply  tmp_000020.ply  tmp_000021.ply  tmp_000022.ply  tmp_000024.ply  tmp_000027.ply
Registration/reg_data/obs_interp_ply/: 15.ply  16.ply  19.ply  2.ply  24.ply  26.ply  37.ply  39.ply  45.ply  47.ply  5.ply  58.ply  62.ply  67.ply  72.ply  tmp.py
Registration/reg_data/results/: deriv_000035.ply  deriv_000041.ply  deriv_000061.ply  deriv_000076.ply  deriv_000088.ply  derivative.ply  error.txt
Registration/results/: deriv_000000.ply  deriv_000005.ply  deriv_000011.ply  deriv_000017.ply  deriv_000023.ply  deriv_000029.ply  deriv_000035.ply  deriv_000041.ply  deriv_000047.ply  deriv_000053.ply  deriv_000061.ply  deriv_000065.ply  deriv_000071.ply  deriv_000076.ply  deriv_000081.ply  deriv_000084.ply  deriv_000088.ply  error.txt  hull_idx.txt  readme.md
Registration/src/: mesh.cpp
Simulation/: Extract_trajectory.py  One_cluster_PBD_3D_solver_test.py  PBD_3D_solver.py  PBD_3D_solver_NoRegis.py  Pyrender.py  Pyrender_obs.py  Pyrender_results.py  SDF.txt  Trajectory2actuations.py  closest_points.txt  eg_der.txt  eg_err.txt  example.py  flexExtSoft.cpp  run_mul.sh
Videos/: make-gifs.py  viewpoint_config.txt
cube_results/: ComputeError.py  NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  Pyrender_results.py  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
data_1013/: ComputeError.py
data_1013 results/: ComputeError.py  NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
data_1014 results/: NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
final_results/: Pyrender_results.py  run.sh
lift_results/: NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
pyramid_result/: NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
sin_results/: ComputeError.py  NoRegBarChart.txt  NoRegHeatmap.txt  NoRegLineChart.txt  RegBarChart.txt  RegHeatmap.txt  RegLineChart.txt
(+13764 files in other folders)
